Fix MathJax container handling and improve text alignment for math display

--- a/assets/style.css
+++ b/assets/style.css
@@ -308,6 +308,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .math-display mjx-math{
     line-height: 1.0 !important;
+    text-align: center;
 }
 
 /* Classe per math inline */
